--- a/.github/workflows/vite.yml
+++ b/.github/workflows/vite.yml
@@ -2,8 +2,18 @@ name: Deploy Vite App to GitHub Pages
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
+    
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
   build-and-deploy:
